[workspace]
members = ["fav", "fav_cli", "fav_core", "fav_test_utils", "fav_utils_ng", "fav_utils"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.13"
authors = ["Louis <836250617@qq.com>"]
description = "Back up your favorite online resources with CLI."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/fav"
documentation = ""

[workspace.dependencies]
fav_core = { path = "fav_core" }
fav_utils = { path = "fav_utils" }
fav_cli = { path = "fav_cli" }
fav_test_utils = { path = "fav_test_utils" }
fav_utils_ng = { path = "fav_utils_ng" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
