[workspace]
members = [
    "fav",
    "fav_cli",
    "fav_core",
    "fav_utils_old",
    "fav_utils",
    "fav_derive",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.2.4"
authors = ["Louis <836250617@qq.com>"]
description = "Back up your favorite online resources with CLI."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/fav"
documentation = ""

[workspace.dependencies]
fav_core = { path = "fav_core", version = "0.0.1-beta5" }
fav_derive = { path = "fav_derive", version = "0.0.1-beta1" }
fav_utils = { path = "fav_utils", version = "0.0.1-beta4" }
fav_cli = { path = "fav_cli" }
fav_utils_old = { path = "fav_utils_old" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
