[package]
name = "fav_cli"
version.workspace = true
authors.workspace = true
description = "Fav's CLI, helping persist the remote source. Repo: https://github.com/kingwingfly/fav"
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_cli"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fav_utils = { workspace = true }
fav_core.workspace = true
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = { version = "4" }
# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Tracing
tracing = { version = "0.1" }
# utils
chrono = "0.4.35"

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["bili"]
bili = []
