[package]
name = "fav_core"
version = "0.0.1-alpha1"
authors.workspace = true
description = "Fav's core crate; A collection of traits."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_core"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# net
url = "2.5"
http = "1"
# protobuf
protobuf = { version = "3", features = ["with-bytes"] }
protobuf-json-mapping = { version = "3" }
# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[build-dependencies]
rustc_version = "0.4.0"
protobuf-codegen = { version = "3" }

[features]
default = []
test_utils = []
