[package]
name = "fav_core"
version = "0.0.1-alpha8"
authors.workspace = true
description = "Fav's core crate; A collection of traits."
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_core"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# net
url = "2.5"
http = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
# protobuf
protobuf = { version = "3", features = ["with-bytes"] }
protobuf-json-mapping = { version = "3" }
# serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# async
trait-variant = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "macros"] }
# utils
bitflags = "2.4"
# derive
fav_derive = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rustc_version = "0.4.0"
protobuf-codegen = { version = "3" }

[features]
default = ["derive"]
derive = ["dep:fav_derive"]
