[package]
name = "fav_derive"
version = "0.0.1-alpha2"
authors.workspace = true
description = "Derive macros for fav"
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_derive"

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
fav_core.workspace = true
reqwest = { version = "0.11" }

[build-dependencies]
rustc_version = "0.4.0"
