[package]
name = "fav_utils"
version = "0.0.1-beta5"
authors.workspace = true
description = "Fav's utils crate; A collection of utilities and data structures for the fav project"
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation = "https://docs.rs/fav_utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
fav_core.workspace = true
# CLI
indicatif = { version = "0.17", features = ["tokio"] }
# Serde
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
# ProtoBuf
protobuf = { version = "3", features = ["with-bytes"] }
protobuf-json-mapping = { version = "3" }
# Net
reqwest = { version = "0.11", features = ["json", "cookies"] }
url = "2.5"
# Runtime
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
] }
# tracing
tracing = { version = "0.1" }
# Tools
qrcode = { version = "0.13", default-features = false }
tempfile = "3.9.0"
sanitize-filename = "0.5.0"
md5 = "0.7.0"

[build-dependencies]
protobuf = { version = "3", features = ["with-bytes"] }
protobuf-codegen = { version = "3" }
rustc_version = "0.4.0"

[features]
default = ["bili"]
bili = []
